k3s_cluster/base/private/code/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: private
  labels:
    app: private-n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: private-n8n
  template:
    metadata:
      labels:
        app: private-n8n
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
      containers:
        - name: n8n
          image: n8nio/n8n:latest
          ports:
            - containerPort: 5678
          resources:
            requests:
              memory: "128Mi"
            limits:
              memory: "2Gi"
          volumeMounts:
            - name: data
              mountPath: /home/node/.n8n   # n8n stores its data here
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
