k3s_cluster/base/private/code/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: private
  labels:
    app: private-code-n8n
spec:
  type: ClusterIP
  selector:
    app: private-code-n8n
  ports:
    - name: web
      protocol: TCP
      port: 4429
      targetPort: 5678
