k3s_cluster/base/private/code/n8n/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: private
  labels:
    app: private-code-n8n
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`n8n.code.private.home`)
      # middlewares:
      #   - name: private-middleware-auth-authentik
      services:
        - name: private-code-n8n-service
          port: 4429
          # tls: {}
